--- a/seo/data-1.html
+++ b/seo/data-1.html
@@ -147,10 +147,12 @@ body {
               <div class="row">
                
                   <ul class="list-unstyled mb-0">
-                  <!--RecentPosts-->
-             <div id="recent-post">         <li>
-       <a href="../seo/data-1.html">data 1 </a> 
+                  <!--RecentPosts-->             <div id="recent-post">         <li>
+       <a href="../seo/we-fdsf-fdas.html">we fdsf fdas </a> 
          </li>			  </div>
+            <div id="recent-post">         
+<li>       <a href="../seo/data-1.html">data 1 </a>          </li>
+         </div>
 <!--EndRecentPosts-->
 				    
                   </ul>
