--- a/index.html
+++ b/index.html
@@ -73,6 +73,19 @@ body {
           
 		  <div class="my-posts">
 <!--myPost--><div class="card mb-4">
+            <img class="card-img-top" src="./Images/there-is-no-way-to-test-it.jpg" alt="">
+            <div class="card-body">
+              <h2 class="card-title"><a href="./seo/there-is-no-way-to-test-it.html">there is no way to test it</a></h2>
+              <p class="card-text">there is so much data tat we can asdfasdf afsd fafd</p>
+              <a href="./seo/there-is-no-way-to-test-it.html" class="btn btn-primary">read more &rarr;</a>
+            </div>
+            <div class="card-footer text-muted">
+              posted on 12-02-2021 05:30 pm by
+              <a href=""></a>
+            </div>
+          </div><!--endmyPost-->
+
+<!--myPost--><div class="card mb-4">
             <img class="card-img-top" src="./Images/we-fdsf-fdas.jpg" alt="">
             <div class="card-body">
               <h2 class="card-title"><a href="./seo/we-fdsf-fdas.html">we fdsf fdas</a></h2>
@@ -148,8 +161,12 @@ body {
                
                   <ul class="list-unstyled mb-0">
                   <!--RecentPosts-->             <div id="recent-post">         <li>
-       <a href="./seo/we-fdsf-fdas.html">we fdsf fdas </a> 
+       <a href="./seo/there-is-no-way-to-test-it.html">there is no way to test it </a> 
          </li>			  </div>
+            <div id="recent-post">         
+<li>       <a href="./seo/we-fdsf-fdas.html">we fdsf fdas </a>          </li>
+         </div>
+
             <div id="recent-post">         
 <li>       <a href="./seo/data-1.html">data 1 </a>          </li>
          </div>
