--- a/sitemap.html
+++ b/sitemap.html
@@ -92,6 +92,13 @@ body {
     <dd class="col-sm-8"><small>fdafsads dfasf dfasd dfadsf asdf dfasdf dsafasdfsdfsdfsd ggggrrwwss</small></dd>
 </dl>
 	
+
+
+	<dl class="row">
+    <dt class="col-sm-4"><small><a href="https://tuheedakram.github.io/newalltest/seo/there-is-no-way-to-test-it.html" title="there is no way to test it">there is no way to test it</a></small></dt>
+    <dd class="col-sm-8"><small>there is so much data tat we can asdfasdf afsd fafd</small></dd>
+</dl>
+	
 <!--endsitemap-->				
 					
             </div>    
@@ -143,8 +150,12 @@ body {
                
                   <ul class="list-unstyled mb-0" class="leftCat">
                   <!--RecentPosts-->             <div id="recent-post">         <li>
-       <a href="./seo/we-fdsf-fdas.html">we fdsf fdas </a> 
+       <a href="./seo/there-is-no-way-to-test-it.html">there is no way to test it </a> 
          </li>			  </div>
+            <div id="recent-post">         
+<li>       <a href="./seo/we-fdsf-fdas.html">we fdsf fdas </a>          </li>
+         </div>
+
             <div id="recent-post">         
 <li>       <a href="./seo/data-1.html">data 1 </a>          </li>
          </div>
