--- a/index-template.html
+++ b/index-template.html
@@ -122,8 +122,12 @@ body {
                
                   <ul class="list-unstyled mb-0">
                   <!--RecentPosts-->             <div id="recent-post">         <li>
-       <a href="./seo/we-fdsf-fdas.html">we fdsf fdas </a> 
+       <a href="./seo/there-is-no-way-to-test-it.html">there is no way to test it </a> 
          </li>			  </div>
+            <div id="recent-post">         
+<li>       <a href="./seo/we-fdsf-fdas.html">we fdsf fdas </a>          </li>
+         </div>
+
             <div id="recent-post">         
 <li>       <a href="./seo/data-1.html">data 1 </a>          </li>
          </div>
